--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/notifications": "^7.15.1",
     "@supabase/supabase-js": "^2.74.0",
     "@tabler/icons-react": "^3.29.0",
+    "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^11.15.0",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
